[gd_scene load_steps=9 format=2]

[ext_resource path="res://webber/webber.tscn" type="PackedScene" id=1]
[ext_resource path="res://level/level.gd" type="Script" id=2]
[ext_resource path="res://wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=4]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 841.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 785 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 299.5, 53.5 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Webber" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 92 )

[node name="SideWalls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource( 4 )

[node name="Right" type="CollisionShape2D" parent="SideWalls"]
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="SideWalls"]
shape = SubResource( 2 )

[node name="Killzone" type="Area2D" parent="."]
position = Vector2( 300, 843 )
collision_layer = 2
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
modulate = Color( 0.537255, 1, 0.12549, 1 )
position = Vector2( -0.5, 43.5 )
shape = SubResource( 3 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 300, 400 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 150, 0 )

[node name="Wall3" parent="." instance=ExtResource( 3 )]
position = Vector2( 450, 0 )

[node name="Wall4" parent="." instance=ExtResource( 3 )]
position = Vector2( 302, 828 )

[node name="UI" type="Node2D" parent="."]
z_index = 1

[node name="Score" type="Label" parent="UI"]
margin_top = 1.0
margin_right = 76.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="UI"]
margin_left = 442.0
margin_right = 600.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "High
0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Killzone" to="." method="_on_Killzone_area_entered"]
[connection signal="body_entered" from="Killzone" to="." method="_on_Killzone_body_entered"]
